--- a/admin/css/generalAdmin.css
+++ b/admin/css/generalAdmin.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -51,15 +49,21 @@ body {
     position: absolute;
     top: 7rem;
     
-    background-color: #fff;
+    background-color: #FFE2E2;
+    outline: 1px solid #E72323;
     border: 1px solid #ff3e25;
     border-radius: 1.4rem;
+
+
+    opacity: 0;
     /* box-shadow: #e0e0e0 0px 4px 10px; */
 }
 .error-container span {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: #474747;
+    text-align: center;
+
+    font-size: 16px;
+    font-weight: 300;
+    color: #E72323;
 }
 
 .form-container {
@@ -231,3 +235,14 @@ main .admin-options .option {
     font-weight: 700;
 }
 
+@keyframes appear {
+    20% {
+        opacity: 1;
+    }
+    60% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
