--- a/css/general.css
+++ b/css/general.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -19,7 +17,7 @@ html, body {
 }
 
 body {
-    padding: 1.7rem;
+    padding: 0 1.7rem 1.7rem 1.7rem; 
     background: #f2f7ff;
     background-attachment: fixed;
     background-size: cover;
@@ -27,15 +25,17 @@ body {
 
 header {
     width: 100%;
-    height: 8vh;
+    height: 6.8rem;
+
     display: flex;
     justify-content: space-between;
-    position: relative;
-}
-header svg {
-    width: 4rem;
-    height: 4rem;
-    transform: translateX(6px);
+    align-items: center;
+    position: sticky;
+    top: 0;
+
+    background-color: #f2f7ff;
+
+    z-index: 100;
 }
 header .home {
     padding: 1rem;
@@ -66,16 +66,25 @@ header .right-container .username-container .headerUsername {
     transform: translateY(0.5rem);
 }
 header .right-container .dropdown-container {
-    cursor: pointer
+    width: 4rem;
+    height: 4rem;
+
+    transform: translateX(6px);
+
+    cursor: pointer;
+}
+header .right-container .dropdown-container svg {
+    width: 100%;
+    height: 100%;
+    
+    pointer-events: none;
 }
 header .right-container .dropdown-container .dropdown-options {
     width: 15rem;
     height: auto;
-    padding: 1rem;
 
     display: flex;
     flex-direction: column;
-    gap: 1.2rem;
     position: absolute;
     top: 4rem; right: 0;
 
@@ -86,6 +95,12 @@ header .right-container .dropdown-container .dropdown-options {
     background-color: #fff;
 }
 header .right-container .dropdown-container .dropdown-options a {
+    width: 100%;
+    height: 3.4rem;
+    padding-top: 0.5rem;
+    padding-left: 1rem;
+    
+
     color: #3783f5;
 }
 
@@ -111,7 +126,6 @@ li {
 }
 
 body {
-    padding: 1.7rem;
     background: #f2f7ff;
     background-attachment: fixed;
     background-size: cover;
@@ -193,6 +207,7 @@ menu .dropdown-genres .genres-list h2 {
 main {
     height: auto;
     padding-top: 2rem;
+
     color: #7b7b7b;
     font-size: 1.2rem;
     position: relative;
@@ -329,18 +344,46 @@ main {
 }
 
 /* LIBRO.CSS */
+.libroMain-container {
+    padding: 0;
+    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    position: relative;
+}
 .book-container {
     width: 100%;
+    max-width: 50rem;
     height: auto;
+    max-height: calc(100vh - 10rem);
+/*  max-width: 43rem; */
 
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
+.book_sticky {
+    position: sticky;
+    top: 6.8rem;
+}
+/* .alikeBooks_sticky {
+    position: sticky;
+    top: 8rem;
+} */
+.alikeBooks_absolute {
+    position: relative;
+}
+.alikeBooksTitle_sticky {
+    position: sticky;
+    top: 6.5rem;
+} 
+
 .book-data {
     width: 100%;
-    min-height: 80%;
     height: auto;
     padding: 1rem;
 
@@ -349,7 +392,6 @@ main {
 }
 .book-data-first {
     width: 100%;
-    height: 72%;
 
     display: flex;
     gap: 1rem;
@@ -380,12 +422,22 @@ main {
     color: #257cff;
     line-height: 2.4rem;
 }
-.book-data-first .info-container .autor-container{
-    font-family: system-ui;
+.book-data-first .info-container .autor-container {
+    width: fit-content;
+
+    display: flex;
+    align-items: center;
+    gap: .5rem;
 
     font-size: 1.4rem;
     font-weight: 600;
     color: #7b7b7b;
+}
+.book-data-first .info-container .autor-container img {
+    width: 32px;
+    height: 32px;
+
+    border-radius: 2rem;
 }
 .book-data-first .info-container .tags-container {
     width: 100%;
@@ -403,7 +455,6 @@ main {
     justify-content: center;
     align-items: center;
 
-    font-family: system-ui;
     font-size: 1.2rem;
     border-radius: 5rem;
     color: #7b7b7b;
@@ -432,6 +483,7 @@ main {
 }
 .book-data-sec .stars-container .stars {
     font-size: 2rem;
+    color: #555;
 }
 .book-data-sec .stars-container svg {
     width: 2.2rem;
@@ -463,7 +515,7 @@ main {
 }
 
 .buttons {
-    width: 100%;
+    max-width: 40rem;
     height: 6rem;
 
     display: flex;
@@ -500,12 +552,15 @@ main {
     font-size: 3rem;
     color: #e62323;
 }
-.buttons .wishList-button {
+.buttons .addToList-button {
     height: 100%;
     padding: .8rem;
+
     display: flex;
     align-items: center;
     flex: 1;
+    gap: .5rem;
+    position: relative;
 
     text-decoration: none;
     font-size: 1.5rem;
@@ -514,10 +569,244 @@ main {
     border-radius: 2rem;
     background-color: #fff;
 }
-.buttons .wishList-button svg {
+.buttons .addToList-button svg {
     height: 100%;
     width: 4rem;
     fill: none;
+}
+.buttons .addToList-button .button-desc-container {
+    flex: 1;
+}
+.buttons .addToList-button .addToList-modal {
+    min-height: 22.4rem;
+    max-height: 32rem;
+    width: 31.5rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    position: absolute;
+    bottom: 7rem; right: 0;
+
+    background-color: #fff;
+    border: 1px solid #DFE4EB;
+    border-radius: 1rem;
+    font-size: 16px;
+    font-weight: 500;
+    color: #555;
+
+    display: none;
+}
+.buttons .addToList-button .addToList-modal .bottom {
+    width: 100%;
+    height: 6.3rem;
+    padding: 0 1rem;
+    
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    border-top: 1px solid #DFE4EB;
+}
+.buttons .addToList-button .addToList-modal .bottom svg {
+    width: 4.2rem;
+    height: 4.2rem;
+}
+.buttons .addToList-button .addToList-modal .top {
+    width: 100%;
+    padding: 1rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1;
+}
+.buttons .addToList-button .addToList-modal .top .title {
+    width: 100%;
+    padding-bottom: .5rem;
+
+    display: flex;
+    justify-content: center;
+    
+    border-bottom: 1px solid #DFE4EB;
+}
+.buttons .addToList-button .addToList-modal .top .title h2 {
+    font-size: 16px;
+    font-weight: 500;
+    color: #555;
+}
+.buttons .addToList-button .addToList-modal .top .wished {
+    height: 4rem;
+
+    display: flex;
+    justify-content: space-between;
+}
+.buttons .addToList-button .addToList-modal .top .wished .left {
+    height: 100%;
+
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.buttons .addToList-button .addToList-modal .top .wished .left .listPicture-container {
+    width: 4rem;
+    height: 4rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid #DFE4EB;
+    border-radius: 1rem;
+}
+.buttons .addToList-button .addToList-modal .top .wished .left .listPicture-container svg {
+    width: 2.8rem;
+    height: 2.8rem;
+}
+.buttons .addToList-button .addToList-modal .top .wished .right {
+    width: auto;
+
+    display: flex;
+    align-items: center;
+
+    display: none;
+}
+.buttons .addToList-button .addToList-modal .top .wished .right span {
+    width: 7rem;
+    height: 3rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 12px;
+    font-weight: 400;
+    color: #fff;
+    background-color: #9B9B9B;
+    border-radius: 3rem;
+}
+
+.alikeBooks-container {
+    max-width: 44rem;
+
+    position: sticky;
+    top: 6.5rem;
+}
+.alikeBooksTitle {
+    width: 100%;
+    padding: 0.5rem 0;
+
+    position: sticky;
+    top: 6.6rem;
+
+    font-size: 18px;
+    font-weight: 400;
+    background-color: #f2f7ff;
+
+    z-index: 400;
+}
+.alikeBooks-subContainer {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+    position: relative;
+
+    overflow: hidden;
+}
+.libroCard {
+    width: 14rem;
+    height: 28rem;
+    padding: .5rem;
+
+    background-color: #fff;
+    border-radius: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    gap: .4rem;
+}
+
+.libroCard .bookCover-container {
+    width: 100%;
+    aspect-ratio: 4/6;
+    border-radius: 1.5rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.libroCard .bookCover-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.libroCard .info-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex: 1;
+}
+.libroCard .title-container {
+    width: 100%;
+    height: 3rem;
+} 
+.libroCard .title-container h3 {
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 15px;
+    color: #555;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+.libroCard .libroAuthor {
+    font-size: 13px;
+    font-weight: 500;
+    color: #808080;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+}
+
+.libroCard .priceAndStars-container {
+    width: 100%;
+    height: 2rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    
+}
+.libroCard .priceAndStars-container .priceCard {
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: #3783f5;
+}
+.libroCard .priceAndStars-container .starsCard {
+    height: 100%;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #000;
+    display: flex;
+    align-items: center;
+    gap: .3rem;
+    z-index: 200;
+}
+.libroCard .priceAndStars-container .starsCard svg {
+    width: 18px;
+    height: 18px;
+    fill: none;
+    /* height: calc(100% - 1rem); */
+    /* transform: translateY(.4rem); */
 }
 
 @media (max-width: 350px) {
@@ -529,5 +818,162 @@ main {
         gap: .5rem;
     }
 }
+
+/* miBiblioteca.php */
+.libraryMain-container {
+    width: 100%;
+    padding: 0;
+
+    display: flex;
+    flex-direction: column;
+
+    gap: 10px;
+}
+.libraryMain-container h1 {
+    font-size: 24px;
+    font-weight: 400;
+}
+.libraryMain-container nav {
+    width: 100%;
+    height: 5.8rem;
+    padding: 0 1rem;
+
+    display: flex;
+    justify-content: left;
+
+    border-bottom: 1px solid #c9c9c9;
+}
+.libraryMain-container nav ul {
+    width: 100%;
+    max-width: 32.1rem;
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+}
+.libraryMain-container nav ul li {
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 18px;
+    font-weight: 500;
+}
+.navElement-selected {
+    color: #3783f5;
+    border-bottom: 3px solid #3783f5;
+}
+
+.libraryMain-container .cards-container {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+}
+.libraryMain-container .cards-container .cardsList {
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 0.8rem;
+}
+.libraryMain-container .cards-container .cardsList .bookCard {
+    min-width: 25rem;
+    max-width: 40rem;
+    height: 15.3rem;
+    padding: 0.5rem;
+
+    display: flex;
+    flex: 1;
+    gap: 0.5rem;
+
+    background-color: #fff;
+    border-radius: 1rem;
+}
+.libraryMain-container .cards-container .cardsList .bookCard img {
+    height: 100%;
+
+    aspect-ratio: 4/6;
+    border-radius: 1rem;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData {
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    flex-direction: column;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData h2 {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 20px;
+
+    color: #555;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData .author {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 0.5rem;
+
+    font-size: 14px;
+    font-weight: 500;
+    color: #7b7b7b;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData .author img {
+    width: 2.4rem;
+    height: 2.4rem;
+
+    border-radius: 5rem;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData .description {
+    font-size: 14px;
+
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData .bottomCard {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+
+    flex: 1;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData .bottomCard .stars {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 16px;
+
+    color: #000;
+
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData .bottomCard .stars svg {
+    width: 1.8rem;
+    height: 1.8rem;
+}
+.libraryMain-container .cards-container .cardsList .bookCard .bookData .bottomCard .yourCalification {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 14px;
+    
+    color: #3783F5;
+}
+
 
 
