--- a/css/index.css
+++ b/css/index.css
@@ -322,8 +322,9 @@ label {
     color: #fff;
 }
 .submitBtn-container p a {
-    font-weight: 500;
+    font-weight: 400;
     color: #fff;
+    text-decoration: none;
 }
 
 .confirmEmailModal {
@@ -593,6 +594,7 @@ label {
 .logIn-container form .main-container .submitBtn-container p a {
     color: #fff;
     text-decoration: none;
+    font-weight: 400;
 }
 .logIn-container form .main-container .submitBtn-container .errorMsg-container {
     width: 22.6rem;
